# fuzzy-classification

./: .gitignore  README.md  emr-compile.sh  emr-count-correct.sh  emr-count-test-cases.sh  emr-options.txt  fuzzy-inference.cpp  fuzzy-inference.py  hadoop-run.sh
cpp/: CMakeLists.txt  RandomFuzzyForest.h  RandomFuzzyTree.cpp  RandomFuzzyTree.h  a.out  data.h  fuzzy-inference.cpp  includes.h  main.cpp  math_functions.h  plot.py  test.py  test_RandomForest.h
data-distributor/: mapper.cpp
emr/: mr_word_count.py  text.txt
mapper/: mapper.cpp
python/: ann.py  chi_fuzzy_classifier.py  classifier.py  data_loader.py  fast_fuzzy_classifier.py  feature_selection_ga.py  fuzzy-inference.py  fuzzy_inference.py  fuzzy_inference_test.py  main.py  math_functions.py  myunittest.py  permutation_ga.py  permutation_ga_test.py  throw_away.py
python/fuzzy_classification/classifiers/: Classifier.py  EntropyTree.py  FuzzyEnsemble.py  RandomFuzzyForest.py  RandomFuzzyTree.old.py  RandomFuzzyTree.py  Tree.py  chi_fuzzy_classifier.py  fast_fuzzy_classifier.py
python/fuzzy_classification/feature_selection/: feature_selection_ga.py
python/fuzzy_classification/util/: data_loader.py  dummy_logger.py  math_functions.py  math_functions.pyx
python/test/: TestRandomFuzzyTree.py  testEntropyTree.py
reducer/: CMakeLists.txt  FastRandomFuzzyTree.h  HadoopRunner.h  LocalRunner.h  RandomFuzzyForest.h  RandomFuzzyTree.h  a.out  analysis.txt  callgrind.out.8433  data.h  definitions.h  gmon.out  includes.h  main.cpp  math_functions.h  test_RandomForest.h
result_reducer/: reducer.cpp  reducer.py
